tests/expectations/parser/functions/annotated_arg_not_ident_fail.out
Error [EPAR0370005]: expected 'function', 'transition', or 'inline' -- found '('
    --> test:3:9
     |
   3 |     @foo(?, bar, ?)
     |         ^